force-app/main/default/objects/MCP_Attack_Payload__mdt/MCP_Attack_Payload__mdt.object-meta.xml
<CustomObject>
    <description>Payloads for MCP test attacks in record creation</description>
    <label>MCP Attack Payload</label>
    <pluralLabel>MCP Attack Payloads</pluralLabel>
</CustomObject>