force-app/main/default/objects/MCP_Attack_Payload__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>What this payload tests</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>