force-app/main/default/objects/MCP_Attack_Payload__mdt/fields/Payload_Body__c.field-meta.xml
<CustomField>
    <fullName>Payload_Body__c</fullName>
    <defaultValue>&quot;{{HT}}&quot;</defaultValue>
    <label>Payload Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>