force-app/main/default/objects/MCP_Attack_Payload__mdt/fields/Payload_Type__c.field-meta.xml
<CustomField>
    <fullName>Payload_Type__c</fullName>
    <label>Payload Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benign</fullName>
                <default>true</default>
                <label>Benign</label>
            </value>
            <value>
                <fullName>Direct_Override</fullName>
            </value>
            <value>
                <fullName>Fake_System_Block</fullName>
            </value>
            <value>
                <fullName>Indirect_Reasoning_Hijack</fullName>
            </value>
            <value>
                <fullName>Tool_Call_Mimicry</fullName>
            </value>
            <value>
                <fullName>Encoding_Bypass_Base64</fullName>
            </value>
            <value>
                <fullName>Encoding_Bypass_Unicode</fullName>
            </value>
            <value>
                <fullName>Encoding_Bypass_ROT13</fullName>
            </value>
            <value>
                <fullName>Markdown_Exfil</fullName>
            </value>
            <value>
                <fullName>Honeytoken_Plain</fullName>
            </value>
            <value>
                <fullName>Honeytoken_Confidential_Marked</fullName>
            </value>
            <value>
                <fullName>Read_To_Write_Escalation</fullName>
            </value>
            <value>
                <fullName>Cross_Tenant_Boundary</fullName>
            </value>
            <value>
                <fullName>Authorization_Test</fullName>
            </value>
            <value>
                <fullName>Multi_Stage_Chain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>