force-app/main/default/objects/MCP_Attack_Payload__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Order within payload type</description>
    <label>Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>